; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-mask.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-mask.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXIT_SUCCESS = common dso_local global i32 0, align 4
@LOG_DEBUG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* @EXIT_SUCCESS, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i32, i32* @LOG_DEBUG, align 4
  %9 = call i32 @test_setup_logging(i32 %8)
  %10 = call i32 (...) @test_cg_mask_to_string()
  %11 = call i32 (...) @test_cgroup_mask()
  store i32 %11, i32* %6, align 4
  %12 = call i32 @TEST_REQ_RUNNING_SYSTEMD(i32 %11)
  %13 = load i32, i32* %6, align 4
  ret i32 %13
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @test_cg_mask_to_string(...) #1

declare dso_local i32 @TEST_REQ_RUNNING_SYSTEMD(i32) #1

declare dso_local i32 @test_cgroup_mask(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
